fixed a bug on small screen

--- a/src/index.css
+++ b/src/index.css
@@ -228,6 +228,14 @@ a{
   padding-bottom: 16rem;
 }
 
+#services > div:nth-of-type(1) p{
+  text-align: center;
+  color: white;
+  font-size: 1.5rem;
+  width: 80%;
+  margin: 56px auto 0px auto;
+}
+
 #services > div:nth-of-type(2){
   min-height: 50vh;
 }
@@ -639,6 +647,10 @@ button:focus{
 }
 
 @media only screen and (max-width: 500px){
+  #services > div:nth-of-type(1){
+    padding-bottom: 20rem;
+  }
+
   .portfolio-container{
     display: block;
     width: 90%;
